--- a/docker/oracle8/Dockerfile
+++ b/docker/oracle8/Dockerfile
@@ -10,4 +10,5 @@ ARG NEWUID=1000
 RUN adduser --uid $NEWUID --comment "${NEWUSER}" ${NEWUSER} && \
     echo "$NEWUSER ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/$NEWUSER && chmod 0440 /etc/sudoers.d/$NEWUSER
 
-ENTRYPOINT [ "scl", "enable", "gcc-toolset-10", "bash" ]
+ENTRYPOINT [ "scl", "enable", "gcc-toolset-10" ]
+CMD [ "/bin/bash" ]
