set python format line length as 180

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
     "docker.commands.attach": "${containerCommand} start ${containerId}; ${containerCommand} attach ${containerId}",
+    "black-formatter.args": [
+        "--line-length", "180"
+    ],
 }
