--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,8 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "cwd": "${userHome}/vm/windows",
             "name": "Python: 현재 파일",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
@@ -15,10 +14,6 @@
             "args": [
                 "/dev/nvme1n1", 
             ],
-            // "args": ["/dev/nvme0", "CentOS-Stream-GenericCloud-8-20220913.0.aarch64.qcow2",
-            //     "cloud_init.iso", "alpine.qcow2", "kinetic-server-cloudimg-arm64.img", "/dev/sda", "nvme1", "testnvme", "-d", "info", 
-            //     "--connect", "ssh", "--net", "bridge"
-            // ],
         }
     ]
 }
