--- a/docker/oraclelinux/Dockerfile.8
+++ b/docker/oraclelinux/Dockerfile.8
@@ -1,6 +1,7 @@
 FROM oraclelinux:8
 
-RUN yum -y install \
+RUN yum-config-manager --save --setopt=sslverify=false && \
+    yum -y install \
             sudo \
             which \
             wget \
@@ -26,11 +27,13 @@ ARG NEWUID=1000
 RUN adduser --uid $NEWUID --comment "${NEWUSER}" ${NEWUSER} && \
     echo "$NEWUSER ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/$NEWUSER && chmod 0440 /etc/sudoers.d/$NEWUSER
 
-RUN python3 -m pip install --upgrade pip && \
+RUN pip config set global.trusted-host "pypi.org files.pythonhosted.org pypi.python.org" && \
+    python3 -m pip install --upgrade pip && \
     python3 -m pip install conan Cheetah3 && \
     conan profile detect && \
     echo "core.net.http:cacert_path = {{conan_home_folder}}/cacert.pem" >> ${HOME}/.conan2/global.conf
 
 USER ${NEWUSER}
-RUN conan profile detect && \
+RUN pip config set global.trusted-host "pypi.org files.pythonhosted.org pypi.python.org" && \
+    conan profile detect && \
     echo "core.net.http:cacert_path = {{conan_home_folder}}/cacert.pem" >> ${HOME}/.conan2/global.conf
