add dex manager script for managing device displays and applications

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,10 +9,10 @@
             "type": "debugpy",
             "request": "launch",
             "program": "${file}",
-            "console": "integratedTerminal",
+            "console": "externalTerminal",
             "justMyCode": true,
             "args": [
-                "/dev/nvme1n1", 
+                "인터넷", 
             ],
         }
     ]
