refactor qemu.py: rename add_nvme_drive to add_nvme_namespace for clarity

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,4 +3,5 @@
     "black-formatter.args": [
         "--line-length", "180"
     ],
+    "containers.commands.attach": "${containerCommand} start ${containerId}; ${containerCommand} attach ${containerId}",
 }
