--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,6 @@
         "--line-length", "180"
     ],
     "containers.commands.attach": "${containerCommand} start ${containerId}; ${containerCommand} attach ${containerId}",
+    "python-envs.defaultEnvManager": "ms-python.python:system",
+    "python-envs.pythonProjects": [],
 }
